# tracecompass-orbcode-trace-plugin

./: LICENSE  README.md
demo/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run_demo.py
demo/cmake/: toolchain.cmake
demo/cmake/Platform/: Embedded.cmake
demo/execs/: CMakeLists.txt
demo/execs/binary_semaphore/: CMakeLists.txt
demo/execs/binary_semaphore/src/: main.cpp
demo/execs/blink_demo/: CMakeLists.txt
demo/execs/blink_demo/src/: main.cpp
demo/execs/busy_blinker/: CMakeLists.txt
demo/execs/busy_blinker/src/: main.cpp
demo/execs/counting_semaphores/: CMakeLists.txt
demo/execs/counting_semaphores/src/: main.cpp
demo/execs/counting_semaphores_isr/: CMakeLists.txt
demo/execs/counting_semaphores_isr/src/: main.cpp
demo/execs/embo_demo/: CMakeLists.txt
demo/execs/embo_demo/src/: main.cpp
demo/execs/idle_timer_service/: CMakeLists.txt
demo/execs/idle_timer_service/include/: rtos_tune.h
demo/execs/idle_timer_service/src/: main.cpp
demo/execs/irq_nested/: CMakeLists.txt
demo/execs/irq_nested/src/: main.cpp
demo/execs/irq_train/: CMakeLists.txt
demo/execs/irq_train/src/: main.cpp
demo/execs/mutex_demo/: CMakeLists.txt
demo/execs/mutex_demo/src/: main.cpp
demo/execs/queue_demo/: CMakeLists.txt
demo/execs/queue_demo/src/: main.cpp
demo/execs/task_notify/: CMakeLists.txt
demo/execs/task_notify/src/: main.cpp
demo/execs/task_notify_isr/: CMakeLists.txt
demo/execs/task_notify_isr/src/: main.cpp
demo/libs/: CMakeLists.txt
demo/libs/platform/: CMakeLists.txt
demo/libs/platform/efm32gg/: CMakeLists.txt
demo/libs/platform/efm32gg/include/: interrupts.hpp  trace.hpp
demo/libs/platform/efm32gg/openocd/: flash.cfg
demo/libs/platform/efm32gg/src/: bootstrap.cpp
demo/libs/platform/interface/: CMakeLists.txt
demo/libs/platform/interface/include/: platform.hpp
demo/libs/rtos_trace/: CMakeLists.txt
demo/libs/rtos_trace/include/: TraceHooks.h
demo/libs/rtos_trace/src/: trace_write.cpp
demo/openocd/: CMakeLists.txt  functions.cmake
tool/: .flake8  .gitignore  better_parser.py  parse_rtos_trace.py  pyproject.toml
tool/src/orbcode/pyorb/: __init__.py
tool/src/orbcode/rtos_trace/: address_resolver.py  event.py  generator.py  rtos_events.py  trace_file.py  tracecompass.py
tool/src/orbcode/rtos_trace/rtos_events/: __init__.py  binary_semaphore.py  counting_semaphore.py  exception.py  mutex.py  queue.py  symbol_ref.py  task.py  task_ref.py  type_map.py
tool/src/orbcode/rtos_trace/rtos_processors/: current_task_processor.py  resolve_symbol_name.py
tool/src/tests/: conftest.py  snapshot.py  test_compare_test_output.py  test_rtos_events.py  test_trace_output.py
tool/src/tests/__snapshots__/: .gitignore  test_compare_trace_output[binary_semaphore.trace].expected.txt  test_compare_trace_output[counting_semaphores.trace].expected.txt  test_compare_trace_output[counting_semaphores_isr.trace].expected.txt  test_compare_trace_output[embo_demo.trace].expected.txt  test_compare_trace_output[irq_nested.trace].expected.txt  test_compare_trace_output[itm_time_tester.trace].expected.txt  test_compare_trace_output[mutex_demo.trace].expected.txt  test_compare_trace_output[queue_demo.trace].expected.txt  test_compare_trace_output[task_notify.trace].expected.txt  test_compare_trace_output[task_notify_isr.trace].expected.txt
tool/src/tests/traces/: binary_semaphore.trace  counting_semaphores.trace  counting_semaphores_isr.trace  embo_demo.trace  irq_nested.trace  itm_time_tester.trace  mutex_demo.trace  queue_demo.trace  task_notify.trace  task_notify_isr.trace
(+55 files in other folders)
