[build-system]
build-backend = 'hatchling.build'
requires = [
    'hatchling==1.18.0',
]

[project]
name = 'orbcode-rtos-trace'
version = '1.0.0'
readme = 'README.md'

requires-python = '>=3.9'
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ['src/orbcode']

[tool.hatch.envs.dev]
dependencies = [
    'pytest~=7.4',
    'pytest-cov~=4.1',
]

[tool.hatch.envs.quality]
dependencies = [
    'pytest~=7.4',

    'mypy~=1.5',
    'flake8~=6.1',
    'yapf~=0.40',

    'flake8-bugbear~=23.3',
    'flake8-comprehensions~=3.12',
    'flake8-pyi~=23.5',
    'flake8-pytest-style~=1.7',
    'flake8-quotes~=3.3',
    'flake8-unused-arguments==0.0.13',
    'pep8-naming~=0.13',
    'typing-extensions~=4.5',

]

[tool.hatch.envs.dev.scripts]
tests = 'pytest --cov=orbcode --cov-branch --cov-report html src/tests {args:}'

[tool.hatch.envs.quality.scripts]
check = [
    "flake8 --config=.flake8 src", #
    "mypy src",
]

[project.scripts]
orbrtos_trace = 'orbcode.rtos_trace.tool:main'

[tool.mypy]
warn_unused_configs = true
strict = true
explicit_package_bases = true
mypy_path = "src"

[tool.yapf]
based_on_style = "pep8"
column_limit = 140
indent_width = 4
split_all_top_level_comma_separated_values = true
split_before_first_argument = true
blank_line_before_nested_class_or_def = false
