add_subdirectory(blink_demo)
add_subdirectory(busy_blinker)
add_subdirectory(idle_timer_service)
add_subdirectory(queue_demo)
add_subdirectory(counting_semaphores)
add_subdirectory(counting_semaphores_isr)
add_subdirectory(task_notify)
add_subdirectory(irq_train)
add_subdirectory(irq_nested)
add_subdirectory(task_notify_isr)
add_subdirectory(binary_semaphore)
